--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,16 @@ readme = "README.md"
 repository = "https://github.com/JeremyLG/dbt-serverless"
 documentation = "https://JeremyLG.github.io/dbt-serverless/"
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-    "Typing :: Typed",
-    # Include this classifier to prevent accidently publishing private code to PyPI.
-    #   https://pypi.org/classifiers/
-    "Private :: Do Not Upload",
+    "Typing :: Typed"
 ]
 packages = [{include = "dbt_serverless"}]
 
