--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dbt-serverless"
-version = "0.1.0"
+version = "0.1.1"
 description = "Test project PYPI publication for dbt serverless"
 authors = ["JeremyLG <jeremy.le-gall@hotmail.fr>"]
 license = "MIT"
@@ -78,7 +78,7 @@ extend-ignore = ["E203"]
 
 [tool.black]
 line-length = 99
-target-version = ["py38", "py39", "py310"]
+target-version = ["py39", "py310"]
 
 [tool.isort]
 profile = "black"
