--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,7 +1,9 @@
 name: Terraform Plan
 
 on:
-  push:
+  pull_request:
+    types:
+      - opened
     paths:
       - "iac/**"
       - ".github/workflows/terraform.yml"
