--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Typing :: Typed"
 ]
-packages = [{include = "dbt_serverless"}]
+packages = [{include = "dbt_serverless"}, {include = "iac-pulumi"}]
 
 [tool.poetry.dependencies]
 python = "^3.9,<3.11"
