--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     types:
       - opened
+      - reopened
     paths:
       - "iac/**"
       - ".github/workflows/terraform.yml"
